# llm-basics

./: .gitignore  README.md  pyproject.toml  setup.sh  trace.yaml  try-prompt.sh
docs/: distilgpt2-january-february-march.html  embeddings-distilgpt2.html  embeddings-tinyllama.html  index.html  inside-one-block-distilgpt2.html  inside-one-block-tinyllama.html  notes.md  tinyllama-name-three-primary-colors.html
src/llm_trace/: __init__.py  cache.py  cli.py  collector.py  config.py  embeddings.py  trace_data.py
src/llm_trace/renderers/: __init__.py  _util.py  animated.py  animated_v2.py  animated_v3.py  html.py  inside_block.py  png.py  terminal.py
tests/llm_trace/: test_cache.py  test_collector.py  test_config.py  test_renderers.py
