[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "llm-basics"
version = "0.1.0"
description = "Step-by-step animated visualization of how an LLM turns a prompt into the next token. HuggingFace transformers under the hood; renders as standalone HTML."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Local LLM tracing — the model + tokenizer
    "transformers>=4.40",
    "torch>=2.2",

    # Numerics & config
    "numpy>=1.26",
    "pyyaml>=6.0",

    # CLI
    "typer>=0.12",
    "rich>=13.0",

    # Static visualizations (PNG renderer)
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.0,<0.15.0",
    "playwright>=1.58.0",
]

[project.scripts]
llm-trace = "llm_trace.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_trace"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # Line too long (let formatter handle it)
    "B008",   # Do not perform function calls in argument defaults (typer Option pattern)
    "C901",   # Too complex
]

[tool.ruff.lint.isort]
known-first-party = ["llm_trace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
